--- a/courses.html
+++ b/courses.html
@@ -22,7 +22,7 @@ bodyClass: page-services-list
 <div class="container pb-6">
   <div class="row">
     {% assign sorted_courses = site.courses | sort:"num" %}
-    {% for course in site.courses %}
+    {% for course in sorted_courses %}
     <div class="col-12 col-md-4 mb-1">
       <div class="service service-summary">
         <div class="service-content">
