--- a/internships.html
+++ b/internships.html
@@ -10,7 +10,7 @@ bodyClass: page-team-list
       <div class="col-12">
         <h1>Internships</h1>
          <p>
-            We would be providing internships to talented professionals to work with us in our Data Science Journey. 
+            We would be providing internships to talented students to work with us in our Data Science Journey. 
             Selected interns would be working with our experts of more than 
             <u>Two decades of industry experience on real world problems.</u>  
            
@@ -26,12 +26,7 @@ bodyClass: page-team-list
                 and a data science portfolio</u> 
                 which can be show cased to future employers.   
         </p>
-        <p>
-            If you are interested , please do contact us at 
-            <div class="call-box-bottom">
-                  <a href="{{site.baseurl}}/contact" class="button">Contact</a>
-            </div>
-        </p>
+
       </div>
     </div>
   </div>
